Working on lighting

--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,12 +132,15 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Maps/testHouse
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -666,28 +669,32 @@ PointLight.DistanceFieldShadows=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/cablebox_fbm/cable
-MRUItem1=/Game/Geometry/Meshes/pencil_fbm/Pencil
-MRUItem2=/Game/Geometry/Meshes/mug_fbm/Mug
-MRUItem3=/Game/Geometry/Meshes/endtable_fbm/endTable
-MRUItem4=/Game/Geometry/Meshes/tv_fbm/tv
-MRUItem5=/Game/Geometry/Meshes/bookshelf_fbm/shelf
-MRUItem6=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
-MRUItem7=/Game/Geometry/Meshes/couch_fbm/ocuhc
-MRUItem8=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem9=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem10=/Game/Geometry/Meshes/Import/cablebox_pCube1
-MRUItem11=/Game/ngc6357_Mat
-MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem13=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem15=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem17=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem18=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem19=/Game/FirstPersonBP/Blueprints/HUDBluePrint
+MRUItem0=/Game/Geometry/Meshes/CubeMaterial
+MRUItem1=/Game/Geometry/Meshes/cablebox_fbm/cable
+MRUItem2=/Game/Geometry/Meshes/pencil_fbm/Pencil
+MRUItem3=/Game/Geometry/Meshes/mug_fbm/Mug
+MRUItem4=/Game/Geometry/Meshes/endtable_fbm/endTable
+MRUItem5=/Game/Geometry/Meshes/tv_fbm/tv
+MRUItem6=/Game/Geometry/Meshes/bookshelf_fbm/shelf
+MRUItem7=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
+MRUItem8=/Game/Geometry/Meshes/couch_fbm/ocuhc
+MRUItem9=/Game/Geometry/Meshes/Import/cablebox_pCube2
+MRUItem10=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
+MRUItem11=/Game/Geometry/Meshes/Import/cablebox_pCube1
+MRUItem12=/Game/ngc6357_Mat
+MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem14=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem16=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem18=/Game/FirstPersonBP/Blueprints/Drop_Test
+MRUItem19=/Game/FirstPersonBP/Blueprints/HUDbp
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -708,6 +715,7 @@ LastLogListing=FBXImport
 /Game/Geometry/Meshes/Import/cablebox_pCube1.cablebox_pCube1=1
 /Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor.couch_lambert1_BaseColor=0
 /Game/Geometry/Meshes/endtable_fbm/endTable.endTable=0
+/Game/Geometry/Meshes/cablebox_fbm/cable.cable=0
 
 [RootWindow]
 ScreenPosition=X=369.143 Y=236.000
@@ -1414,7 +1422,7 @@ TextProperty.Variable=True
 StaticMeshActor.Rendering=True
 StaticMeshActor.Collision=True
 StaticMeshActor.StaticMesh=False
-StaticMeshActor.Materials=False
+StaticMeshActor.Materials=True
 StaticMeshActor.Actor=True
 StaticMeshComponent.Rendering=True
 StaticMeshActor.Physics=True
@@ -1464,6 +1472,8 @@ BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinde
 K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/oldradio_pPrism1.oldradio_pPrism1;
 RecentlyPlaced=/Game/Geometry/Meshes/cablebox_fbm/cable.cable;
 RecentlyPlaced=/Game/Geometry/Meshes/cablebox_pCube2.cablebox_pCube2;
@@ -1472,7 +1482,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/pencil_pCylinder1.pencil_pCylinder1;
 RecentlyPlaced=/Game/Geometry/Meshes/mug_fbm/Mug.Mug;
 RecentlyPlaced=/Game/Geometry/Meshes/mug_pCylinder1.mug_pCylinder1;
 RecentlyPlaced=/Game/Geometry/Meshes/endtable_fbm/endTable.endTable;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/endtable_pCube5.endtable_pCube5;
 RecentlyPlaced=/Game/Geometry/Meshes/tv_fbm/tv.tv;
 RecentlyPlaced=/Game/Geometry/Meshes/bookshelf_fbm/shelf.shelf;
@@ -1483,7 +1492,6 @@ RecentlyPlaced=/Game/ngc6357_Mat.ngc6357_Mat;
 RecentlyPlaced=/Game/Geometry/Meshes/bookshelf.bookshelf;
 RecentlyPlaced=/Game/Geometry/Meshes/chair_pCube6.chair_pCube6;
 RecentlyPlaced=/Game/Geometry/Meshes/chair_pCube7.chair_pCube7;
-RecentlyPlaced=/Game/Geometry/Meshes/couch_pCube7.couch_pCube7;
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
