lighting living room

--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -16,6 +16,7 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
@@ -131,26 +132,21 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.CurrentViewType=0
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-AssetPropertyPicker.ThumbnailSizeScale=0.100000
-AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-<<<<<<< HEAD
 LastLevel=/Game/Maps/testHouse
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial
-=======
+CleanShutdown=False
+None=======
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-
-[AssetEditorManager]
-CleanShutdown=True
->>>>>>> master
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -662,7 +658,6 @@ AssetViewerSettings.Color Grading=True
 AssetViewerSettings.Lens=True
 AssetViewerSettings.Rendering Features=True
 StaticMesh.Thumbnail=True
-<<<<<<< HEAD
 Texture2D.Compression=True
 Texture2D.LevelOfDetail=True
 Texture2D.Texture=True
@@ -680,83 +675,66 @@ PointLight.DistanceFieldShadows=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
-=======
+None=======
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
 MaterialExpressionFunctionOutput.MaterialExpression=True
 MaterialExpressionFresnel.MaterialExpressionFresnel=True
 MaterialExpressionFresnel.MaterialExpression=True
->>>>>>> master
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
 
 [ContentBrowserRecent]
-<<<<<<< HEAD
-MRUItem0=/Game/Geometry/Meshes/CubeMaterial
-MRUItem1=/Game/Geometry/Meshes/cablebox_fbm/cable
-MRUItem2=/Game/Geometry/Meshes/pencil_fbm/Pencil
-MRUItem3=/Game/Geometry/Meshes/mug_fbm/Mug
-MRUItem4=/Game/Geometry/Meshes/endtable_fbm/endTable
-MRUItem5=/Game/Geometry/Meshes/tv_fbm/tv
-MRUItem6=/Game/Geometry/Meshes/bookshelf_fbm/shelf
-MRUItem7=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
-MRUItem8=/Game/Geometry/Meshes/couch_fbm/ocuhc
-MRUItem9=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem10=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem11=/Game/Geometry/Meshes/Import/cablebox_pCube1
-MRUItem12=/Game/ngc6357_Mat
-MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem14=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem16=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem18=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem19=/Game/FirstPersonBP/Blueprints/HUDbp
-=======
-MRUItem0=/Game/ngc6357_Mat
-MRUItem0=/Game/Geometry/Meshes/cablebox_fbm/cable
-MRUItem1=/Engine/Functions/Engine_MaterialFunctions02/Fresnel_Function
-MRUItem1=/Game/Geometry/Meshes/pencil_fbm/Pencil
-MRUItem2=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem2=/Game/Geometry/Meshes/mug_fbm/Mug
-MRUItem3=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem3=/Game/Geometry/Meshes/endtable_fbm/endTable
-MRUItem4=/Game/Geometry/Meshes/Import/cablebox_pCube1
-MRUItem4=/Game/Geometry/Meshes/tv_fbm/tv
-MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem5=/Game/Geometry/Meshes/bookshelf_fbm/shelf
-MRUItem6=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem6=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem7=/Game/Geometry/Meshes/couch_fbm/ocuhc
-MRUItem8=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem8=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem9=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem10=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem10=/Game/Geometry/Meshes/Import/cablebox_pCube1
-MRUItem11=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem11=/Game/ngc6357_Mat
-MRUItem12=/Game/FirstPersonBP/Blueprints/HUDBluePrint
-MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem13=/Game/FirstPersonBP/HUD
-MRUItem13=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem14=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem15=/Game/FirstPersonBP/FirstPersonOverview
-MRUItem15=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem17=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem18=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem19=/Game/FirstPersonBP/Blueprints/HUDBluePrint
->>>>>>> master
+MRUItem0=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp
+MRUItem1=/Game/Geometry/Meshes/table_fbm/Table
+MRUItem2=/Game/Geometry/Meshes/cablebox_fbm/cable
+MRUItem3=/Game/Geometry/Meshes/pencil_fbm/Pencil
+MRUItem4=/Game/Geometry/Meshes/mug_fbm/Mug
+MRUItem5=/Game/Geometry/Meshes/endtable_fbm/endTable
+MRUItem6=/Game/Geometry/Meshes/tv_fbm/tv
+MRUItem7=/Game/Geometry/Meshes/bookshelf_fbm/shelf
+MRUItem8=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
+MRUItem9=/Game/Geometry/Meshes/couch_fbm/ocuhc
+MRUItem10=/Game/Geometry/Meshes/Import/cablebox_pCube2
+MRUItem11=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
+MRUItem12=/Game/Geometry/Meshes/Import/cablebox_pCube1
+MRUItem13=/Game/ngc6357_Mat
+MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem15=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem17=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem18=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem19=/Game/FirstPersonBP/Blueprints/Drop_Test
 
 [MessageLog]
 LastLogListing=LoadErrors
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 None=======
 Texture2D.Compression=True
 Texture2D.LevelOfDetail=True
@@ -795,6 +773,7 @@ None=======
 /Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor.couch_lambert1_BaseColor=0
 /Game/Geometry/Meshes/endtable_fbm/endTable.endTable=0
 /Game/Geometry/Meshes/cablebox_fbm/cable.cable=0
+/Game/Geometry/Meshes/Import/lamp_fbm/Lamp.Lamp=0
 
 [RootWindow]
 ScreenPosition=X=368.800 Y=236.000
@@ -1495,10 +1474,10 @@ CapsuleComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 REINST_Shape_Cylinder_Blueprint_C_173="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
-MaterialEditorPreviewParameters="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[1].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[2].Object.ParameterValue\" "
+MaterialEditorPreviewParameters=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpression=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 
 [DetailCategoriesAdvanced]
@@ -1558,6 +1537,14 @@ BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinde
 K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Game/Geometry/Meshes/housetest.housetest;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp.Lamp;
+RecentlyPlaced=/Game/Geometry/Meshes/lamp.lamp;
+RecentlyPlaced=/Game/Geometry/Meshes/table_fbm/Table.Table;
+RecentlyPlaced=/Game/Geometry/Meshes/table.table;
 RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/oldradio_pPrism1.oldradio_pPrism1;
@@ -1570,14 +1557,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/mug_pCylinder1.mug_pCylinder1;
 RecentlyPlaced=/Game/Geometry/Meshes/endtable_fbm/endTable.endTable;
 RecentlyPlaced=/Game/Geometry/Meshes/endtable_pCube5.endtable_pCube5;
 RecentlyPlaced=/Game/Geometry/Meshes/tv_fbm/tv.tv;
-RecentlyPlaced=/Game/Geometry/Meshes/bookshelf_fbm/shelf.shelf;
-RecentlyPlaced=/Game/Geometry/Meshes/couch_fbm/ocuhc.ocuhc;
-RecentlyPlaced=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor.couch_lambert1_BaseColor;
-RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_Chamfer.1M_Cube_Chamfer;
-RecentlyPlaced=/Game/ngc6357_Mat.ngc6357_Mat;
-RecentlyPlaced=/Game/Geometry/Meshes/bookshelf.bookshelf;
-RecentlyPlaced=/Game/Geometry/Meshes/chair_pCube6.chair_pCube6;
-RecentlyPlaced=/Game/Geometry/Meshes/chair_pCube7.chair_pCube7;
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
