Added more furnitue and sized rroom

--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,6 +145,9 @@ LastLevel=/Game/Maps/testHouse
 [AssetEditorManager]
 CleanShutdown=False
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued.ued
+OpenAssetsAtExit=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial
+OpenAssetsAtExit=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2.book2
 None=======
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
@@ -709,28 +712,40 @@ RectLight.DistanceFieldShadows=True
 RectLight.Tags=True
 RectLight.Cooking=True
 RectLight.Actor=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+WorldSettings.Broadphase=True
+WorldSettings.Cooking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp
-MRUItem1=/Game/Geometry/Meshes/table_fbm/Table
-MRUItem2=/Game/Geometry/Meshes/cablebox_fbm/cable
-MRUItem3=/Game/Geometry/Meshes/pencil_fbm/Pencil
-MRUItem4=/Game/Geometry/Meshes/mug_fbm/Mug
-MRUItem5=/Game/Geometry/Meshes/endtable_fbm/endTable
-MRUItem6=/Game/Geometry/Meshes/tv_fbm/tv
-MRUItem7=/Game/Geometry/Meshes/bookshelf_fbm/shelf
-MRUItem8=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
-MRUItem9=/Game/Geometry/Meshes/couch_fbm/ocuhc
-MRUItem10=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem11=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem12=/Game/Geometry/Meshes/Import/cablebox_pCube1
-MRUItem13=/Game/ngc6357_Mat
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem15=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem17=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem18=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem19=/Game/FirstPersonBP/Blueprints/Drop_Test
+MRUItem0=/Game/Geometry/Meshes/CubeMaterial
+MRUItem1=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2
+MRUItem2=/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued
+MRUItem3=/Game/Geometry/Meshes/Import/plant_fbm/1/Lead
+MRUItem4=/Game/Geometry/Meshes/Import/plant_fbm/2/Siik
+MRUItem5=/Game/Geometry/Meshes/Import/plant_fbm/Plante
+MRUItem6=/Game/Geometry/Meshes/Import/vase_fbm/Vase
+MRUItem7=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp
+MRUItem8=/Game/Geometry/Meshes/table_fbm/Table
+MRUItem9=/Game/Geometry/Meshes/cablebox_fbm/cable
+MRUItem10=/Game/Geometry/Meshes/pencil_fbm/Pencil
+MRUItem11=/Game/Geometry/Meshes/mug_fbm/Mug
+MRUItem12=/Game/Geometry/Meshes/endtable_fbm/endTable
+MRUItem13=/Game/Geometry/Meshes/tv_fbm/tv
+MRUItem14=/Game/Geometry/Meshes/bookshelf_fbm/shelf
+MRUItem15=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
+MRUItem16=/Game/Geometry/Meshes/couch_fbm/ocuhc
+MRUItem17=/Game/Geometry/Meshes/Import/cablebox_pCube2
+MRUItem18=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
+MRUItem19=/Game/Geometry/Meshes/Import/cablebox_pCube1
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -774,6 +789,9 @@ None=======
 /Game/Geometry/Meshes/endtable_fbm/endTable.endTable=0
 /Game/Geometry/Meshes/cablebox_fbm/cable.cable=0
 /Game/Geometry/Meshes/Import/lamp_fbm/Lamp.Lamp=0
+/Game/Geometry/Meshes/Import/plant_fbm/Plante.Plante=0
+/Game/Geometry/Meshes/Import/plant_fbm/1/Lead.Lead=0
+/Game/Geometry/Meshes/Import/plant_fbm/2/Siik.Siik=0
 
 [RootWindow]
 ScreenPosition=X=368.800 Y=236.000
@@ -1537,6 +1555,19 @@ BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinde
 K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2.book2;
+RecentlyPlaced=/Game/Geometry/Meshes/bookfreud.bookfreud;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued.ued;
+RecentlyPlaced=/Game/Geometry/Meshes/bookChristmasCarol.bookChristmasCarol;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/plant_fbm/2/Siik.Siik;
+RecentlyPlaced=/Game/Geometry/Meshes/plant_pCube1.plant_pCube1;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/plant_fbm/1/Lead.Lead;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/plant_fbm/Plante.Plante;
+RecentlyPlaced=/Game/Geometry/Meshes/plant_group2.plant_group2;
+RecentlyPlaced=/Game/Geometry/Meshes/plant_pPipe1.plant_pPipe1;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/vase_fbm/Vase.Vase;
+RecentlyPlaced=/Game/Geometry/Meshes/vase.vase;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/housetest.housetest;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -1544,19 +1575,6 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp.Lamp;
 RecentlyPlaced=/Game/Geometry/Meshes/lamp.lamp;
 RecentlyPlaced=/Game/Geometry/Meshes/table_fbm/Table.Table;
-RecentlyPlaced=/Game/Geometry/Meshes/table.table;
-RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Geometry/Meshes/oldradio_pPrism1.oldradio_pPrism1;
-RecentlyPlaced=/Game/Geometry/Meshes/cablebox_fbm/cable.cable;
-RecentlyPlaced=/Game/Geometry/Meshes/cablebox_pCube2.cablebox_pCube2;
-RecentlyPlaced=/Game/Geometry/Meshes/pencil_fbm/Pencil.Pencil;
-RecentlyPlaced=/Game/Geometry/Meshes/pencil_pCylinder1.pencil_pCylinder1;
-RecentlyPlaced=/Game/Geometry/Meshes/mug_fbm/Mug.Mug;
-RecentlyPlaced=/Game/Geometry/Meshes/mug_pCylinder1.mug_pCylinder1;
-RecentlyPlaced=/Game/Geometry/Meshes/endtable_fbm/endTable.endTable;
-RecentlyPlaced=/Game/Geometry/Meshes/endtable_pCube5.endtable_pCube5;
-RecentlyPlaced=/Game/Geometry/Meshes/tv_fbm/tv.tv;
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
