--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Prefab
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -144,10 +144,19 @@ LastLevel=/Game/Maps/testHouse
 
 [AssetEditorManager]
 CleanShutdown=False
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued.ued
-OpenAssetsAtExit=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial
-OpenAssetsAtExit=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2.book2
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Prefab/bookChristmasCarol_Blueprint.bookChristmasCarol_Blueprint
+OpenAssetsAtExit=/Game/Prefab/table_Blueprint.table_Blueprint
+OpenAssetsAtExit=/Game/Prefab/endtable_pCube5_Blueprint.endtable_pCube5_Blueprint
+OpenAssetsAtExit=/Game/Prefab/lamp_Blueprint.lamp_Blueprint
+OpenAssetsAtExit=/Game/Prefab/mug_pCylinder1_Blueprint.mug_pCylinder1_Blueprint
+OpenAssetsAtExit=/Game/Prefab/pencil_pCylinder2_Blueprint.pencil_pCylinder2_Blueprint
+OpenAssetsAtExit=/Game/Geometry/Meshes/Import/chairwood_fbm/hai.hai
+OpenAssetsAtExit=/Game/Prefab/plant_pPipe1_Blueprint.plant_pPipe1_Blueprint
+OpenAssetsAtExit=/Game/Prefab/bookshelf_Blueprint.bookshelf_Blueprint
+OpenAssetsAtExit=/Game/Prefab/cablebox_pCube1_Blueprint.cablebox_pCube1_Blueprint
+OpenAssetsAtExit=/Game/Prefab/bookfreud_Blueprint.bookfreud_Blueprint
+OpenAssetsAtExit=/Game/Prefab/cablebox_pCube2_Blueprint.cablebox_pCube2_Blueprint
 None=======
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
@@ -724,28 +733,106 @@ WorldSettings.VR=True
 WorldSettings.Tick=True
 WorldSettings.Broadphase=True
 WorldSettings.Cooking=True
+chairwood_Blueprint_C.Tick=True
+chairwood_Blueprint_C.Rendering=True
+chairwood_Blueprint_C.Replication=True
+chairwood_Blueprint_C.Input=True
+chairwood_Blueprint_C.Actor=True
+chairwood_Blueprint_C.TransformCommon=True
+chair_pCube6_Blueprint_C.Tick=True
+chair_pCube6_Blueprint_C.Rendering=True
+chair_pCube6_Blueprint_C.Replication=True
+chair_pCube6_Blueprint_C.Input=True
+chair_pCube6_Blueprint_C.Actor=True
+chair_pCube6_Blueprint_C.TransformCommon=True
+endtable_pCube5_Blueprint_C.Tick=True
+endtable_pCube5_Blueprint_C.Rendering=True
+endtable_pCube5_Blueprint_C.Replication=True
+endtable_pCube5_Blueprint_C.Input=True
+endtable_pCube5_Blueprint_C.Actor=True
+endtable_pCube5_Blueprint_C.TransformCommon=True
+lamp_Blueprint_C.Tick=True
+lamp_Blueprint_C.Rendering=True
+lamp_Blueprint_C.Replication=True
+lamp_Blueprint_C.Input=True
+lamp_Blueprint_C.Actor=True
+lamp_Blueprint_C.TransformCommon=True
+mug_pCylinder1_Blueprint_C.Tick=True
+mug_pCylinder1_Blueprint_C.Rendering=True
+mug_pCylinder1_Blueprint_C.Replication=True
+mug_pCylinder1_Blueprint_C.Input=True
+mug_pCylinder1_Blueprint_C.Actor=True
+mug_pCylinder1_Blueprint_C.TransformCommon=True
+pencil_pCylinder2_Blueprint_C.Tick=True
+pencil_pCylinder2_Blueprint_C.Rendering=True
+pencil_pCylinder2_Blueprint_C.Replication=True
+pencil_pCylinder2_Blueprint_C.Input=True
+pencil_pCylinder2_Blueprint_C.Actor=True
+pencil_pCylinder2_Blueprint_C.TransformCommon=True
+bookChristmasCarol_Blueprint_C.Tick=True
+bookChristmasCarol_Blueprint_C.Rendering=True
+bookChristmasCarol_Blueprint_C.Replication=True
+bookChristmasCarol_Blueprint_C.Input=True
+bookChristmasCarol_Blueprint_C.Actor=True
+bookChristmasCarol_Blueprint_C.TransformCommon=True
+table_Blueprint_C.Tick=True
+table_Blueprint_C.Rendering=False
+table_Blueprint_C.Replication=True
+table_Blueprint_C.Input=True
+table_Blueprint_C.Actor=True
+table_Blueprint_C.TransformCommon=True
+plant_pPipe1_Blueprint_C.Tick=True
+plant_pPipe1_Blueprint_C.Rendering=True
+plant_pPipe1_Blueprint_C.Replication=True
+plant_pPipe1_Blueprint_C.Input=True
+plant_pPipe1_Blueprint_C.Actor=True
+plant_pPipe1_Blueprint_C.TransformCommon=True
+bookshelf_Blueprint_C.Tick=True
+bookshelf_Blueprint_C.Rendering=True
+bookshelf_Blueprint_C.Replication=True
+bookshelf_Blueprint_C.Input=True
+bookshelf_Blueprint_C.Actor=True
+bookshelf_Blueprint_C.TransformCommon=True
+cablebox_pCube1_Blueprint_C.Tick=True
+cablebox_pCube1_Blueprint_C.Rendering=True
+cablebox_pCube1_Blueprint_C.Replication=True
+cablebox_pCube1_Blueprint_C.Input=True
+cablebox_pCube1_Blueprint_C.Actor=True
+cablebox_pCube1_Blueprint_C.TransformCommon=True
+bookfreud_Blueprint_C.Tick=True
+bookfreud_Blueprint_C.Rendering=True
+bookfreud_Blueprint_C.Replication=True
+bookfreud_Blueprint_C.Input=True
+bookfreud_Blueprint_C.Actor=True
+bookfreud_Blueprint_C.TransformCommon=True
+cablebox_pCube2_Blueprint_C.Tick=True
+cablebox_pCube2_Blueprint_C.Rendering=True
+cablebox_pCube2_Blueprint_C.Replication=True
+cablebox_pCube2_Blueprint_C.Input=True
+cablebox_pCube2_Blueprint_C.Actor=True
+cablebox_pCube2_Blueprint_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/CubeMaterial
-MRUItem1=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2
-MRUItem2=/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued
-MRUItem3=/Game/Geometry/Meshes/Import/plant_fbm/1/Lead
-MRUItem4=/Game/Geometry/Meshes/Import/plant_fbm/2/Siik
-MRUItem5=/Game/Geometry/Meshes/Import/plant_fbm/Plante
-MRUItem6=/Game/Geometry/Meshes/Import/vase_fbm/Vase
-MRUItem7=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp
-MRUItem8=/Game/Geometry/Meshes/table_fbm/Table
-MRUItem9=/Game/Geometry/Meshes/cablebox_fbm/cable
-MRUItem10=/Game/Geometry/Meshes/pencil_fbm/Pencil
-MRUItem11=/Game/Geometry/Meshes/mug_fbm/Mug
-MRUItem12=/Game/Geometry/Meshes/endtable_fbm/endTable
-MRUItem13=/Game/Geometry/Meshes/tv_fbm/tv
-MRUItem14=/Game/Geometry/Meshes/bookshelf_fbm/shelf
-MRUItem15=/Game/Geometry/Meshes/couch_fbm/couch_lambert1_BaseColor
-MRUItem16=/Game/Geometry/Meshes/couch_fbm/ocuhc
-MRUItem17=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem18=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem19=/Game/Geometry/Meshes/Import/cablebox_pCube1
+MRUItem0=/Game/Prefab/cablebox_pCube2_Blueprint
+MRUItem1=/Game/Prefab/bookfreud_Blueprint
+MRUItem2=/Game/Prefab/cablebox_pCube1_Blueprint
+MRUItem3=/Game/Prefab/bookshelf_Blueprint
+MRUItem4=/Game/Prefab/plant_pPipe1_Blueprint
+MRUItem5=/Game/Prefab/table_Blueprint
+MRUItem6=/Game/Prefab/bookChristmasCarol_Blueprint
+MRUItem7=/Game/pencil_pCylinder2_Blueprint
+MRUItem8=/Game/Prefab/mug_pCylinder1_Blueprint
+MRUItem9=/Game/Prefab/lamp_Blueprint
+MRUItem10=/Game/Prefab/endtable_pCube5_Blueprint
+MRUItem11=/Game/Prefab/chair_pCube6_Blueprint
+MRUItem12=/Game/Prefab/chairwood_Blueprint
+MRUItem13=/Game/Geometry/Meshes/Import/chairwood_fbm/hai
+MRUItem14=/Game/Geometry/Meshes/CubeMaterial
+MRUItem15=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2
+MRUItem16=/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued
+MRUItem17=/Game/Geometry/Meshes/Import/plant_fbm/1/Lead
+MRUItem18=/Game/Geometry/Meshes/Import/plant_fbm/2/Siik
+MRUItem19=/Game/Geometry/Meshes/Import/plant_fbm/Plante
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -792,6 +879,9 @@ None=======
 /Game/Geometry/Meshes/Import/plant_fbm/Plante.Plante=0
 /Game/Geometry/Meshes/Import/plant_fbm/1/Lead.Lead=0
 /Game/Geometry/Meshes/Import/plant_fbm/2/Siik.Siik=0
+/Game/Geometry/Meshes/Import/bookChristmasCarol_fbm/ued.ued=0
+/Game/Geometry/Meshes/Import/bookfreud_fbm/book2.book2=0
+/Game/Geometry/Meshes/CubeMaterial.CubeMaterial=0
 
 [RootWindow]
 ScreenPosition=X=368.800 Y=236.000
@@ -812,7 +902,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/wwwsp/Desktop/GAMEDEV/GD_project4/project4/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/Jon Castro/Documents/GD_project4/project4/Content/Maps
 BRUSH=../../../../../gd_project4/project4/Content/
 FBX=../../../../../gd_project4/project4/Content/
 FBXAnim=../../../../../gd_project4/project4/Content/
@@ -822,7 +912,7 @@ GenericOpen=../../../../../gd_project4/project4/Content/
 GenericSave=../../../../../gd_project4/project4/Content/
 MeshImportExport=../../../../../gd_project4/project4/Content/
 WorldRoot=../../../../../gd_project4/project4/Content/
-Level=../../../../../gd_project4/project4/Content/
+Level=../../../../../../Users/Jon Castro/Documents/GD_project4/project4/Content/Maps
 Project=D:/Epic Games/UE_4.20/
 
 [ModuleFileTracking]
@@ -1555,6 +1645,9 @@ BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinde
 K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Prefab/chairwood_Blueprint.chairwood_Blueprint;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/chairwood_fbm/hai.hai;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/chairwood.chairwood;
 RecentlyPlaced=/Game/Geometry/Meshes/CubeMaterial.CubeMaterial;
 RecentlyPlaced=/Game/Geometry/Meshes/Import/bookfreud_fbm/book2.book2;
 RecentlyPlaced=/Game/Geometry/Meshes/bookfreud.bookfreud;
@@ -1572,9 +1665,6 @@ RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/housetest.housetest;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Game/Geometry/Meshes/Import/lamp_fbm/Lamp.Lamp;
-RecentlyPlaced=/Game/Geometry/Meshes/lamp.lamp;
-RecentlyPlaced=/Game/Geometry/Meshes/table_fbm/Table.Table;
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
