--- a/project4/Saved/Config/Windows/Engine.ini
+++ b/project4/Saved/Config/Windows/Engine.ini
@@ -36,4 +36,12 @@ WindowMirrorMode=1
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
 
