add main and pause menu, m key is currently used to puase menu

--- a/project4/Saved/Config/Windows/Engine.ini
+++ b/project4/Saved/Config/Windows/Engine.ini
@@ -38,10 +38,10 @@ FlipNormalMapGreenChannel=False
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=True
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
 StickyKeysConfirmation=True
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
 
